tests/NormalTests/paczka2/big_fuzzy/10300357.err
Error in line 8: S758 S758 21,0
Error in line 14: S758 S474 46,2
Error in line 36: EKI6MiBmxW S474 -4,7
Error in line 40: biWVys S758 51,6
Error in line 23: EKI6MiBmxW S474 83,4
Error in line 48: BDNyUBE8U S474 88,9
Error in line 60: k2GM1LUXDyc S474 94,9
Error in line 44: bqFnjGPvZet S14 30,9
Error in line 63: EKI6MiBmxW S848 98,0
Error in line 71: S758 S848 40,6
Error in line 79: biWVys S474 53,5
Error in line 78: EKI6MiBmxW S474 71,4
Error in line 81: biWVys S14 99,2
Error in line 76: k2GM1LUXDyc S474 36,6
Error in line 89: d5Sfov0hTfA S474 56,5
Error in line 93: d5Sfov0hTfA S758 0,1
Error in line 97: EKI6MiBmxW S14 26,1
Error in line 126: S758 S758 46,94
Error in line 119: S758 S758 56,1
Error in line 128: S7_8 S14 _2,_
Error in line 127: S758 S14 28,7
Error in line 135: BDNyUBE8U S14 57,4
Error in line 134: S758 S758 94,2
Error in line 140: S758 S474 13,4
Error in line 160: S758 S14 6,8
Error in line 166: S758 S848 84,6
Error in line 162: bqFnjGPvZet S848 17,2
Error in line 180: EKI6MiBmxW S758 65,0
Error in line 182: k2GM1LUXDyc S474 78,5
Error in line 190: BDNyUBE8U S14 82,6
Error in line 199: S758 S758 38,7
Error in line 207: EKI6MiBmxW S758 7,8
Error in line 223: bqFnjGPvZet S474 95,3
Error in line 231: bqFnjGPvZet S758 1P1,2
Error in line 229: bqFnjGPvZet S758 22,6
